# CVision

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  api.py  config.py  cvision.ipynb  data_cleaner.py  db_setup.py  docker-compose.yml  jobs_scraper.py  langgraph.json  linkedin_scraper.py  main.py  pyproject.toml  requirements.txt  run_scraper.bat  training_data.py
.github/workflows/: ci.yml
agents/: cv_analyzer.py  cv_parser.py  job_matcher.py  report_builder.py
alembic/: env.py
alembic/versions/: 26e48f4660ab_initial_schema.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AnimatedPage.tsx  Footer.tsx  Navbar.tsx  NebulaBackground.tsx  ScrollReveal.tsx  Skeleton.tsx  ThemeProvider.tsx  Toast.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/lib/: animations.ts  utils.ts
frontend/src/pages/: AnalysisPage.tsx  DashboardPage.tsx  HomePage.tsx  UploadPage.tsx
frontend/src/types/: index.ts
graph/: workflow.py
models/: db_models.py  schemas.py
scrapers/: jobs_scraper.py  linkedin_scraper.py
tests/: test_agents.py  test_api.py  test_file_handler.py  test_schemas.py
utils/: file_handler.py  ingest.py  retriever.py
