[project]
name = "cvision"
version = "0.2.0"
description = "AI-powered CV-to-Job matching platform with LangGraph agents and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=3.0.0",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "langgraph-cli[inmem]>=0.4.25",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "httpx>=1.1.0",
    "alembic>=1.18.4",
    "sentry-sdk>=2.0.0",
    "slowapi>=0.1.9",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "spacy>=3.8.14",
    "streamlit>=1.57.0",
    "wikipedia>=1.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["*.ipynb", ".venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
